[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/drop2.png" type="Texture" id=1]
[ext_resource path="res://drops/base_drop.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 29.6009

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
uniform bool apply = true;
uniform vec4 color_offset;

void fragment() {
	vec4 texture_color = texture(TEXTURE, UV);
	vec4 color = texture_color;
	
	if (apply == true) {
		color += color_offset * texture_color.a
	}
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/apply = false
shader_param/color_offset = null

[sub_resource type="CircleShape2D" id=4]
radius = 3.56186

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.4, 1.4, 1.4, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Drop" type="Area2D"]
linear_damp = 0.0
collision_layer = 32
collision_mask = 17
script = ExtResource( 2 )
color_state = Color( 0.2, 0, 0, 1 )

[node name="PlayerFollow" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="Despawn" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Glow" type="AnimationPlayer" parent="."]
autoplay = "glow"
anims/glow = SubResource( 5 )

[node name="SpawnMoveX" type="Tween" parent="."]

[node name="SpawnMoveY" type="Tween" parent="."]

[connection signal="body_shape_entered" from="." to="." method="_on_Drop_body_shape_entered"]
[connection signal="tween_all_completed" from="SpawnMoveX" to="." method="_on_SpawnMoveX_tween_all_completed"]
[connection signal="tween_completed" from="SpawnMoveX" to="." method="_on_SpawnMoveX_tween_completed"]
